<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.myfragment.schedulematch.FragmentPrev">

    <Spinner
        android:id="@+id/spinner_prev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperRefresh_prev"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_prev"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progress_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>