<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.myfragment.schedulematch.FragmentNext">

   <Spinner
       android:id="@+id/spinner_next"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:popupBackground="@color/colorUnchecked">
   </Spinner>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperRefresh_next"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progress_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>