<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/schedule_menu"
        android:title="Match"
        android:iconTint="@color/white"
        android:icon="@drawable/nextblack"/>
    <item
        android:id="@+id/team_menu"
        android:title="Team"
        android:iconTint="@color/white"
        android:icon="@drawable/soccerballvariant"/>
    <item
        android:id="@+id/favorite_menu"
        android:title="Favorite"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_favorite_black_24dp"/>
</menu>